# sidorov.dev

./: .coveragerc  .dockerignore  .env  .env-sample  .gitignore  .isort.cfg  .travis.yml  CNAME  Dockerfile  Makefile  Pipfile  Procfile  README.md  Taskfile.yml  db_env_to_psql.py  docker-compose.yml  gunicorn.conf.py  index.html  package-lock.json  package.json  projects.html  requirements.txt  resume.html  runserver_heroku.sh  runserver_local.sh  runserver_local_uvicorn.sh  sidorov.dev.code-workspace  style.css  style_dark.css  style_light.css  style_mob.css  thoughts.html
.circleci/: config.yml  wait_for_postgresql.sh
.github/workflows/: deploy.yml
config/: settings.yaml
ddl/: reset_db.sql
docker/: deploy-web.sh  install-python-libs.sh  install-system-libs.sh  run-web.sh
serverless/: package-lock.json  serverless.yml
serverless/src/resizer/: event.json  lambda_function.py
services/api/: Taskfile.yml  packages.txt  poetry.toml  pyproject.toml
services/api/db/: projects.json  techstack.json
services/frontend/: package-lock.json  svelte.config.js  tsconfig.json
services/frontend/src/: app.html
services/frontend/static/: custom.css
src/: app.html
src/applications/api/: urls.py  views.py
src/applications/meta/: apps.py  tests.py  urls.py  views.py
src/applications/onboarding/: admin.py  apps.py  models.py  urls.py
src/applications/portfolio/: apps.py  tests.py  urls.py  views.py
src/applications/resume/: admin.py  models.py  tests.py  urls.py  views.py
src/apps/index/: urls.py  views.py
src/apps/meta/: tests.py  urls.py  views.py
src/apps/portfolio/: apps.py  tests.py  urls.py  views.py
src/apps/resume/: tests.py  urls.py  views.py
src/apps/thoughts/: tests.py  urls.py  views.py
src/lib/styles/: custom.css  main.css  main.scss
src/periodic/: app.py  celeryconfig.py
src/periodic/tasks/: __init__.py  calendars.py  invite_all.py  invite_single.py
src/periodic/tests/: test_tasks.py  test_xmodels.py
src/periodic/utils/: xmodels.py
src/project/: config.py  settings.py  urls.py  views.py
src/project/jinja2/: _base.html  anon.html  base.html
src/project/templates/: base.html  index.html  resume.html  (+2 more)
src/routes/: +layout.svelte  +page.svelte  +page.ts
static/: custom.css
(+129 files in other folders)
